# thps-modding-resources

./: README.md  THUG2 byte values.txt  test-for-compiler-release.md  tutorial_anim_conversion_thaw.md
DirectX 9 Proxy DLL template/: README.md
DirectX 9 Proxy DLL template/src/: config.c  config.h  main.c  patch.c
DirectX9 Proxy DLL template/: CMakeLists.txt  README.md  myIDirect3D9.cpp  myIDirect3DDevice9.cpp  proxydll.cpp
Documents/: BoneDoc_THAW.txt  BoneDoc_THUG2.txt  KEYLIST_COMPLETE.txt  THUG2 byte values.txt  camshake.txt  cooldown_cfunc_thaw.txt  loadbigmaps_thug2.txt  port thug2 item.txt  thaw byte values.txt  thaw_level_porting.txt  thaw_ps2_function_names.txt  thaw_wallplantandcavemanwallridecooldown.txt  thug1-addresses.txt  thug1_keys.txt  thug2_extended_cap.txt  tutorial_anim_conversion_thaw.md  value-list-thug2.txt
Guitar Hero SDK/: .gitignore  .gitmodules  README.md  install.bat  package.json  sdk.bat  sdk.js
Guitar Hero SDK/AnimConverter/: thug2_to_thaw.txt
Guitar Hero SDK/Config/: config.ini
Guitar Hero SDK/GHWTBaseMod/: ModInfo.ini  README.md
Guitar Hero SDK/NodeQBC/: .gitignore  QBC.js  README.md  sK4_PedSkaterAI.qb
Guitar Hero SDK/Resources/: tex_GuitarHero_SDK_X360.py
Guitar Hero SDK/SDKCode/: ChecksumWatcher.js  Checksums.js  Constants.js  EasySetup.js  FSBHandler.js  FakeConsole.js  INIHandler.js  Menu_Core.js  (+5 more)
Misc/: notepadpp_syntax_Q.xml
Tools/: CREDITS.md  README.md  qbc_test.q
img/: how-to-port-animations-to-thaw.md
tutorial-anim-conversion/: how-to-port-animations-to-thaw.md  how-to-port-animations-to-thaw.txt
(+3757 files in other folders)
